--- a/push_swap/libft/Makefile
+++ b/push_swap/libft/Makefile
@@ -1,7 +1,7 @@
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 NAME = libft.a
-SRCS = ft_putstr_fd.c ft_split.c ft_strjoin.c ft_strlen.c\
+SRCS = ft_putstr_fd.c ft_split.c ft_strjoin.c ft_strlen.c ft_atoi.c\
 		ft_strncmp.c ft_substr.c get_next_line.c get_next_line_utils.c
 OBJS = ${SRCS:.c=.o}
 SRCS_B = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c ft_lstadd_back_bonus.c\
